<resources>
    <string name="app_name">Recipe Magic</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add Recipe</string>
    <string name="menu_category">Categories</string>
    <string name="menu_my_recipes">My Recipes</string>
    <string name="menu_timer">Timer</string>
    <string name="button_capture_recipe">Capture</string>
    <string name="bar_set_title">Recipe Name</string>
    <string name="recipe_picture_description">Recipe</string>
    <string name="recipe">RECIPE</string>
    <string name="magic">MAGIC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start">Start</string>
    <string name="search">Search...</string>
    <string name="restart">Reset</string>
    <string name="minutes">  Minutes</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="search_my_recipe">Search My Recipes</string>
    <string name="set">Set</string>
    <string name="pause">Pause</string>
</resources>
