<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddRecipe">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="419dp"
        android:layout_height="542dp"
        android:contentDescription="@string/recipe_picture_description"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_wrapHeight="1604"
        tools:layout_conversion_wrapWidth="1080" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="47dp"
        android:onClick="takePicture"
        android:text="@string/button_capture_recipe"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        tools:layout_conversion_wrapHeight="126"
        tools:layout_conversion_wrapWidth="231" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/bar_set_title"
        android:inputType="textPersonName"
        android:maxLength="32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview"
        tools:layout_conversion_wrapHeight="118"
        tools:layout_conversion_wrapWidth="560" />

</androidx.constraintlayout.widget.ConstraintLayout>